// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action handle docker tag 1`] = `
"updated:
  track: main
  gitConfig:
    repoURL: https://github.com/apollographql/some-repo.git
    path: services/hello-world
    ref: d97b3a3241
  dockerImage:
    tag: main---0013323-2024.03-gd97b3a3241


no-sha-found:
  gitConfig:
    trackMutableRef: main
    repoURL: https://github.com/apollographql/some-repo.git
    path: services/hello-world
    ref: old
  dockerImage:
    tag: main---0013323-2024.03-d97b3a3

diff-tree-sha:
  track: main
  gitConfig:
    repoURL: https://github.com/apollographql/some-repo.git
    path: services/hello-world
    ref: old
  dockerImage:
    tag: main---0013323-2024.03-gd97b3a3240"
`;

exports[`action handle docker tag with unknown commit 1`] = `
"updated:
  track: main
  gitConfig:
    repoURL: https://github.com/apollographql/some-repo.git
    path: services/hello-world
    ref: d97b3a3241
  dockerImage:
    tag: main---0013323-2024.03-gd97b3a3241


no-sha-found:
  gitConfig:
    trackMutableRef: main
    repoURL: https://github.com/apollographql/some-repo.git
    path: services/hello-world
    ref: new
  dockerImage:
    tag: main---0013323-2024.03-d97b3a3

diff-tree-sha:
  track: main
  gitConfig:
    repoURL: https://github.com/apollographql/some-repo.git
    path: services/hello-world
    ref: new
  dockerImage:
    tag: main---0013323-2024.03-gd97b3a3240"
`;

exports[`action handles unknown current ref 1`] = `
"some-service-tree:
  gitConfig:
    repoURL: https://github.com/apollographql/some-repo.git
    path: services/hello-world
    trackMutableRef: main
    ref: new
"
`;

exports[`action only changes ref when tree sha changes 1`] = `
"some-service-tree:
  gitConfig:
    repoURL: https://github.com/apollographql/some-repo.git
    path: services/hello-world
    trackMutableRef: main
    ref: old
"
`;

exports[`action only changes ref when tree sha changes 2`] = `
"some-service-tree:
  gitConfig:
    repoURL: https://github.com/apollographql/some-repo.git
    path: services/hello-world
    trackMutableRef: main
    ref: new
"
`;

exports[`action updates git ref when repoURL/path are in \`global\` 1`] = `
"global:
  gitConfig:
    repoURL: https://github.com/apollographql/some-repo.git
    path: services/hello-world

some-service-dev1:
  gitConfig:
    ref:      'immutable-pr-1234-hooray'   # this should change but stay single-quoted!
    trackMutableRef: pr-1234
"
`;

exports[`action updates git refs 1`] = `
"some-service-dev0:
  gitConfig:
    repoURL: https://github.com/apollographql/some-repo.git
    path: services/hello-world
    ref: "immutable-pr-1234-hooray"   # this should change but stay double-quoted!
    trackMutableRef: pr-1234

some-service-dev1:
  gitConfig:
    repoURL: https://github.com/apollographql/some-repo.git
    path: services/hello-world
    ref:      'immutable-pr-1234-hooray'   # this should change but stay single-quoted!
    trackMutableRef: pr-1234

some-service-staging:
  gitConfig:
    repoURL: https://github.com/apollographql/some-repo.git
    path: services/hello-world
    trackMutableRef: main

    ref:        immutable-main-hooray  #this can stay unquoted because it won't look like a number

some-service-prod:
  gitConfig:
    repoURL: https://github.com/apollographql/some-repo.git
    path: services/hello-world
    ref: abcdef1234    # NO TOUCHING! No tracking.

another:
  gitConfig:
    repoURL: https://github.com/apollographql/some-repo.git
    path: services/hello-world
    ref: '12345678'   # this becomes a number and will definitely need to be quoted
    trackMutableRef: make-it-numeric

some-service-top-level:
  track: pr-1234
  gitConfig:
    repoURL: https://github.com/apollographql/some-repo.git
    path: services/hello-world
    ref: "immutable-pr-1234-hooray"   # this should change but stay double-quoted!
"
`;
